#94 modificado libreria de nube de palabras por kumo

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -136,6 +136,8 @@ VIOLIN_LOG_TIME.yAxisTitle = Registres
 
 about_app = Quant a l'aplicaci\u00F3
 
+backGroundImage = Path to the background image
+
 borderLength = ample de l\u00EDnia
 
 borderSpace = Espai entre l\u00EDnies
@@ -814,6 +816,10 @@ log.event.xls_grade_exported                                    = XLS grade expo
 log.event.xml_grade_exported                                    = XML grade exported
 log.event.zip_archive_of_folder_downloaded                      = S'ha descarregat l'arxiu Zip o la carpeta
 
+maxFont = Max font size
+
+maxWordLength = Max word length
+
 menu.about               = Quant a l'aplicaci\u00F3
 menu.changeconfig        = Change configuration
 menu.changesubject       = Canvia course
@@ -848,6 +854,10 @@ message.export_csv_desglossed = Exportaci\u00F3 CSV amb \u00E8xit. Revisi el fit
 message.export_csv_success    = Exportaci\u00F3 CSV amb \u00E8xit. Revisi els fitxers del directori: 
 message.export_png            = Exportaci\u00F3 PNG amb \u00E8xit. Revisi els fitxers: 
 message.exportdir             = Exportaci\u00F3 amb \u00E8xit. Revisi el fitxer del directori: 
+
+minFont = Min font size
+
+minWordLength = Min word length
 
 module.assign          = Assignaci\u00F3
 module.book            = Llibre
@@ -887,6 +897,8 @@ nodes.scaling.max = Nodes -> Scaling -> Max
 nodes.scaling.min = Nodes -> Scaling -> Min
 
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
+
+padding = Padding
 
 passGradeColor = Passant el color de grau
 
@@ -1026,6 +1038,8 @@ warning = Warning
 
 warning.cannotfind = Cannot find executables in the directory: 
 warning.nofound    = No result matches in the search.
+
+wordFrequencesToReturn = Most repeated words
 
 zeroLineColor = color de la l\u00EDnia zero
 
