--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -136,6 +136,8 @@ VIOLIN_LOG_TIME.yAxisTitle = Logs
 
 about_app = \u00DCber die Bewerbung
 
+backGroundImage = Path to the background image
+
 borderLength = Linienbreite
 
 borderSpace = Zeilenabstand
@@ -811,6 +813,10 @@ log.event.xls_grade_exported                                    = Bewertung als 
 log.event.xml_grade_exported                                    = Bewertung als XML exportiert
 log.event.zip_archive_of_folder_downloaded                      = Verzeichnis wurde heruntergeladen
 
+maxFont = Max font size
+
+maxWordLength = Max word length
+
 menu.about               = \u00DCber die Bewerbung
 menu.changeconfig        = Change configuration
 menu.changesubject       = Das Thema course
@@ -845,6 +851,10 @@ message.export_csv_desglossed = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie
 message.export_csv_success    = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 message.export_png            = PNG-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 message.exportdir             = Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
+
+minFont = Min font size
+
+minWordLength = Min word length
 
 module.assign          = Zuordnung
 module.book            = Buch
@@ -884,6 +894,8 @@ nodes.scaling.max = Nodes -> Scaling -> Max
 nodes.scaling.min = Nodes -> Scaling -> Min
 
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
+
+padding = Padding
 
 passGradeColor = Passing Grad Farbe
 
@@ -1023,6 +1035,8 @@ warning = Warning
 
 warning.cannotfind = Cannot find executables in the directory: 
 warning.nofound    = No result matches in the search.
+
+wordFrequencesToReturn = Top frequency words
 
 zeroLineColor = Nullinie Farbe
 
