--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -136,6 +136,8 @@ VIOLIN_LOG_TIME.yAxisTitle = Logs
 
 about_app = About application
 
+backGroundImage = Path to the background image
+
 borderLength = Line width
 
 borderSpace = Line spacing
@@ -888,6 +890,10 @@ log.event.xls_grade_exported                                    = XLS grade expo
 log.event.xml_grade_exported                                    = XML grade exported
 log.event.zip_archive_of_folder_downloaded                      = Zip archive of folder downloaded
 
+maxFont = Max font size
+
+maxWordLength = Max word length
+
 menu.about               = _About application
 menu.changeconfig        = _Change configuration
 menu.changesubject       = _Change course
@@ -922,6 +928,10 @@ message.export_csv_desglossed = CSV breakdown export successfully. Review the fi
 message.export_csv_success    = CSV export successfully. Review the files in the directory: 
 message.export_png            = PNG export successfully. Review the file: 
 message.exportdir             = Export successfully. Review the directory: 
+
+minFont = Min font size
+
+minWordLength = Min word length
 
 module.assign          = Assignment
 module.book            = Book
@@ -961,6 +971,8 @@ nodes.scaling.max = Nodes -> Scaling -> Max
 nodes.scaling.min = Nodes -> Scaling -> Min
 
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
+
+padding = Padding
 
 passGradeColor = Passing grade color
 
@@ -1100,6 +1112,8 @@ warning = Warning
 
 warning.cannotfind = Cannot find executables in the directory: 
 warning.nofound    = No result matches in the search.
+
+wordFrequencesToReturn = Most repeated words
 
 zeroLineColor = Zero line color
 
