--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -136,6 +136,8 @@ VIOLIN_LOG_TIME.yAxisTitle = Registros
 
 about_app = Acerca de la aplicaci\u00F3n
 
+backGroundImage = Ruta de imagen de fondo
+
 borderLength = Ancho de l\u00EDnea
 
 borderSpace = Espaciado entre l\u00EDneas
@@ -888,6 +890,10 @@ log.event.xls_grade_exported                                    = Calificaci\u00
 log.event.xml_grade_exported                                    = Calificaci\u00F3n XML exportada
 log.event.zip_archive_of_folder_downloaded                      = Directorio descargado en formato Zip
 
+maxFont = Tama\u00F1o de fuente m\u00E1xima
+
+maxWordLength = Longitud m\u00E1xima de la palabra
+
 menu.about               = A_cerca de la aplicaci\u00F3n
 menu.changeconfig        = Ca_mbiar configuraci\u00F3n
 menu.changesubject       = _Cambiar curso
@@ -922,6 +928,10 @@ message.export_csv_desglossed = Exportaci\u00F3n CSV desglosado con \u00E9xito. 
 message.export_csv_success    = Exportaci\u00F3n CSV con \u00E9xito. Revise los ficheros en el directorio: 
 message.export_png            = Exportaci\u00F3n PNG con \u00E9xito. Revise el fichero: 
 message.exportdir             = Exportaci\u00F3n con \u00E9xito. Revise la carpeta: 
+
+minFont = Tama\u00F1o de fuente m\u00EDnima
+
+minWordLength = Longitud m\u00EDnima de la palabra
 
 module.assign          = Tarea
 module.book            = Libro
@@ -961,6 +971,8 @@ nodes.scaling.max = Nodos -> Escalado -> M\u00E1x.
 nodes.scaling.min = Nodos -> Escalado -> M\u00EDn.
 
 notificationLoginSSO = Inicio de sesi\u00F3n con autenticaci\u00F3n Single Sign-On (SSO) usando credenciales previas para encriptar/desencriptar cach\u00E9.
+
+padding = Padding
 
 passGradeColor = Color de calificaci\u00F3n aprobada
 
@@ -1100,6 +1112,8 @@ warning = Advertencia
 
 warning.cannotfind = No se encuentra ejecutables en el directorio: 
 warning.nofound    = No hay resultados en la b\u00FAsqueda.
+
+wordFrequencesToReturn = Palabras m\u00E1s repetidas
 
 zeroLineColor = Color de la l\u00EDnea cero
 
