--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -136,6 +136,8 @@ VIOLIN_LOG_TIME.yAxisTitle = Journaux
 
 about_app = A propos de l'application
 
+backGroundImage = Path to the background image
+
 borderLength = Largeur de ligne
 
 borderSpace = Interligne
@@ -814,6 +816,10 @@ log.event.xls_grade_exported                                    = Notes export\u
 log.event.xml_grade_exported                                    = Notes export\u00E9es en format XML
 log.event.zip_archive_of_folder_downloaded                      = Archive ZIP d'un dossier t\u00E9l\u00E9charg\u00E9e
 
+maxFont = Max font size
+
+maxWordLength = Max word length
+
 menu.about               = A propos de l'application
 menu.changeconfig        = Change configuration
 menu.changesubject       = Change le sujet
@@ -848,6 +854,10 @@ message.export_csv_desglossed = Export CSV avec succ\u00E8s. Passez en revue les
 message.export_csv_success    = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 message.export_png            = Export PNG avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 message.exportdir             = Export avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
+
+minFont = Min font size
+
+minWordLength = Min word length
 
 module.assign          = Affectation
 module.book            = Livre
@@ -887,6 +897,8 @@ nodes.scaling.max = Nodes -> Scaling -> Max
 nodes.scaling.min = Nodes -> Scaling -> Min
 
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
+
+padding = Padding
 
 passGradeColor = En passant la couleur de qualit\u00E9
 
@@ -1026,6 +1038,8 @@ warning = Warning
 
 warning.cannotfind = Cannot find executables in the directory: 
 warning.nofound    = No result matches in the search.
+
+wordFrequencesToReturn = Most repeated words
 
 zeroLineColor = Couleur de la ligne z\u00E9ro
 
