--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -136,6 +136,8 @@ VIOLIN_LOG_TIME.yAxisTitle = Logs
 
 about_app = Informazioni sull'applicazione
 
+backGroundImage = Path to the background image
+
 borderLength = Larghezza della linea
 
 borderSpace = Interlinea
@@ -814,6 +816,10 @@ log.event.xls_grade_exported                                    = Esportate valu
 log.event.xml_grade_exported                                    = Esportate valutazione in XML
 log.event.zip_archive_of_folder_downloaded                      = L'archivio zip della cartella \u00E8 stato scaricato
 
+maxFont = Max font size
+
+maxWordLength = Max word length
+
 menu.about               = Informazioni sull'applicazione
 menu.changeconfig        = Change configuration
 menu.changesubject       = Cambia course
@@ -848,6 +854,10 @@ message.export_csv_desglossed = Esportazione CSV con successo. Esaminare i file:
 message.export_csv_success    = Esportazione CSV con successo. Esaminare i file nella directory: 
 message.export_png            = Esportazione PNG con successo. Esaminare i file nella directory: 
 message.exportdir             = Esportazione con successo. Esaminare i file nella directory: 
+
+minFont = Min font size
+
+minWordLength = Min word length
 
 module.assign          = assegnazione
 module.book            = Libro
@@ -887,6 +897,8 @@ nodes.scaling.max = Nodes -> Scaling -> Max
 nodes.scaling.min = Nodes -> Scaling -> Min
 
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
+
+padding = Padding
 
 passGradeColor = Passando colore grade
 
@@ -1026,6 +1038,8 @@ warning = Warning
 
 warning.cannotfind = Cannot find executables in the directory: 
 warning.nofound    = No result matches in the search.
+
+wordFrequencesToReturn = Most repeated words
 
 zeroLineColor = Colore della linea Zero
 
