--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -136,6 +136,8 @@ VIOLIN_LOG_TIME.yAxisTitle = Hist\u00F3rico
 
 about_app = Sobre a aplica\u00E7\u00E3o
 
+backGroundImage = Path to the background image
+
 borderLength = Espessura da linha
 
 borderSpace = Espa\u00E7amento entre linhas
@@ -814,6 +816,10 @@ log.event.xls_grade_exported                                    = Avalia\u00E7\u
 log.event.xml_grade_exported                                    = Avalia\u00E7\u00E3o exportada em XML
 log.event.zip_archive_of_folder_downloaded                      = Foi descarregado um ficheiro ZIP da pasta
 
+maxFont = Max font size
+
+maxWordLength = Max word length
+
 menu.about               = Sobre a aplica\u00E7\u00E3o
 menu.changeconfig        = Change configuration
 menu.changesubject       = Mudar de course
@@ -848,6 +854,10 @@ message.export_csv_desglossed = Exporta\u00E7\u00E3o CSV com sucesso. Revise os 
 message.export_csv_success    = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
 message.export_png            = Exporta\u00E7\u00E3o PNG com sucesso. Revise os arquivos no diret\u00F3rio: 
 message.exportdir             = Exporta\u00E7\u00E3o com sucesso. Revise os arquivos no diret\u00F3rio: 
+
+minFont = Min font size
+
+minWordLength = Min word length
 
 module.assign          = Tarefa
 module.book            = Livro
@@ -887,6 +897,8 @@ nodes.scaling.max = Nodes -> Scaling -> Max
 nodes.scaling.min = Nodes -> Scaling -> Min
 
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
+
+padding = Padding
 
 passGradeColor = Passando cor grau
 
@@ -1026,6 +1038,8 @@ warning = Warning
 
 warning.cannotfind = Cannot find executables in the directory: 
 warning.nofound    = No result matches in the search.
+
+wordFrequencesToReturn = Most repeated words
 
 zeroLineColor = Zero cor de linha
 
