#99 añadido iconos a la etiqueta de los nodos

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -892,9 +892,13 @@ module.workshop        = Taller
 
 moreMax = M\u00E0xim
 
-nodes.borderWidth = Nodes -> Border width
-nodes.scaling.max = Nodes -> Scaling -> Max
-nodes.scaling.min = Nodes -> Scaling -> Min
+nodes.borderWidth              = Nodes -> Border width
+nodes.scaling.max              = Nodes -> Scaling -> Max
+nodes.scaling.min              = Nodes -> Scaling -> Min
+nodes.weightDiscussionCreation = Nodes -> Discussion creation weight
+nodes.weightReceivePost        = Nodes -> Received post weight
+nodes.weightSelfPost           = Nodes -> Auto reply post weight
+nodes.weightSendPost           = Nodes -> Send post weight
 
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
 
