--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -966,9 +966,13 @@ module.workshop        = Taller
 
 moreMax = M\u00E1ximo
 
-nodes.borderWidth = Nodos -> Ancho borde
-nodes.scaling.max = Nodos -> Escalado -> M\u00E1x.
-nodes.scaling.min = Nodos -> Escalado -> M\u00EDn.
+nodes.borderWidth              = Nodos -> Ancho borde
+nodes.scaling.max              = Nodos -> Escalado -> M\u00E1x.
+nodes.scaling.min              = Nodos -> Escalado -> M\u00EDn.
+nodes.weightDiscussionCreation = Nodos -> Peso creaci\u00F3n discusi\u00F3n
+nodes.weightReceivePost        = Nodos -> Peso post recibido
+nodes.weightSelfPost           = Nodos -> Peso post autorespondido
+nodes.weightSendPost           = Nodos -> Peso post enviado
 
 notificationLoginSSO = Inicio de sesi\u00F3n con autenticaci\u00F3n Single Sign-On (SSO) usando credenciales previas para encriptar/desencriptar cach\u00E9.
 
