--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -889,9 +889,13 @@ module.workshop        = Werkstatt
 
 moreMax = Maximal
 
-nodes.borderWidth = Nodes -> Border width
-nodes.scaling.max = Nodes -> Scaling -> Max
-nodes.scaling.min = Nodes -> Scaling -> Min
+nodes.borderWidth              = Nodes -> Border width
+nodes.scaling.max              = Nodes -> Scaling -> Max
+nodes.scaling.min              = Nodes -> Scaling -> Min
+nodes.weightDiscussionCreation = Nodes -> Discussion creation weight
+nodes.weightReceivePost        = Nodes -> Received post weight
+nodes.weightSelfPost           = Nodes -> Auto reply post weight
+nodes.weightSendPost           = Nodes -> Send post weight
 
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
 
