#99 cambiado iconos en etiquetas y añadido la opcion de oc

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -931,6 +931,8 @@ secondInterval = Sekunden-Intervall
 
 showNonConnected = Show nodes without edges
 
+showNumberPosts = Show number of posts
+
 tab.activityCompletion   = Aktivit\u00E4tsabschluss
 tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
