--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1008,6 +1008,8 @@ secondInterval = Second interval
 
 showNonConnected = Show nodes without edges
 
+showNumberPosts = Show number of posts
+
 tab.activityCompletion   = Activity Completion
 tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
