--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -934,6 +934,8 @@ secondInterval = segon interval
 
 showNonConnected = Show nodes without edges
 
+showNumberPosts = Show number of posts
+
 tab.activityCompletion   = Compleci\u00F3 de l'activitat
 tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
