--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1008,6 +1008,8 @@ secondInterval = Segundo intervalo
 
 showNonConnected = Mostrar nodos sin aristas
 
+showNumberPosts = Mostrar n\u00FAmero de mensajes
+
 tab.activityCompletion   = Finalizaci\u00F3n Actividad
 tab.calendarevent        = Eventos de calendario
 tab.clustering           = Clustering
