--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -934,6 +934,8 @@ secondInterval = deuxi\u00E8me intervalle
 
 showNonConnected = Show nodes without edges
 
+showNumberPosts = Show number of posts
+
 tab.activityCompletion   = Ach\u00E8vement d'activit\u00E9s
 tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
