--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -934,6 +934,8 @@ secondInterval = Secondo intervallo
 
 showNonConnected = Show nodes without edges
 
+showNumberPosts = Show number of posts
+
 tab.activityCompletion   = Completamento attivit\u00E0
 tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
