--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -934,6 +934,8 @@ secondInterval = Segundo intervalo
 
 showNonConnected = Show nodes without edges
 
+showNumberPosts = Show number of posts
+
 tab.activityCompletion   = Conclus\u00E3o das atividades
 tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
