--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -933,6 +933,8 @@ showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
 
+stopWords = Stop words language
+
 tab.activityCompletion   = Aktivit\u00E4tsabschluss
 tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
