--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1010,6 +1010,8 @@ showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
 
+stopWords = Stop words language
+
 tab.activityCompletion   = Activity Completion
 tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
