--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1010,6 +1010,8 @@ showNonConnected = Mostrar nodos sin aristas
 
 showNumberPosts = Mostrar n\u00FAmero de mensajes
 
+stopWords = Idioma de palabras vac\u00EDas
+
 tab.activityCompletion   = Finalizaci\u00F3n Actividad
 tab.calendarevent        = Eventos de calendario
 tab.clustering           = Clustering
