--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -936,6 +936,8 @@ showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
 
+stopWords = Stop words language
+
 tab.activityCompletion   = Ach\u00E8vement d'activit\u00E9s
 tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
