--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -936,6 +936,8 @@ showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
 
+stopWords = Stop words language
+
 tab.activityCompletion   = Completamento attivit\u00E0
 tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
