--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -936,6 +936,8 @@ showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
 
+stopWords = Stop words language
+
 tab.activityCompletion   = Conclus\u00E3o das atividades
 tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
