--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -936,6 +936,8 @@ showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
 
+stopWords = Stop words language
+
 tab.activityCompletion   = Compleci\u00F3 de l'activitat
 tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
