#106 añadido traducción al treemap

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -978,6 +978,8 @@ notificationLoginSSO = Inicio de sesi\u00F3n con autenticaci\u00F3n Single Sign-
 
 padding = Padding
 
+parent = padre
+
 passGradeColor = Color de calificaci\u00F3n aprobada
 
 physics.barnesHut.avoidOverlap                 = F\u00EDsica -> Barnes Hut -> Evitar solapamiento [0.0, 1.0]
@@ -1003,6 +1005,8 @@ physics.solver                                 = F\u00EDsica -> Algoritmo
 physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Constante del muelle
 
 physicsAfterDraw = Habilitar la f\u00EDsica despu\u00E9s de dibujar
+
+root = ra\u00EDz
 
 secondInterval = Segundo intervalo
 
