--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -904,6 +904,8 @@ notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to 
 
 padding = Padding
 
+parent = parent
+
 passGradeColor = Passando colore grade
 
 physics.barnesHut.avoidOverlap                 = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
@@ -929,6 +931,8 @@ physics.solver                                 = Physics -> Solver
 physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spring constant
 
 physicsAfterDraw = Enable physics after draw
+
+root = root
 
 secondInterval = Secondo intervallo
 
