--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -901,6 +901,8 @@ notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to 
 
 padding = Padding
 
+parent = parent
+
 passGradeColor = Passing Grad Farbe
 
 physics.barnesHut.avoidOverlap                 = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
@@ -926,6 +928,8 @@ physics.solver                                 = Physics -> Solver
 physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spring constant
 
 physicsAfterDraw = Enable physics after draw
+
+root = root
 
 secondInterval = Sekunden-Intervall
 
