--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -978,6 +978,8 @@ notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to 
 
 padding = Padding
 
+parent = parent
+
 passGradeColor = Passing grade color
 
 physics.barnesHut.avoidOverlap                 = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
@@ -1003,6 +1005,8 @@ physics.solver                                 = Physics -> Solver
 physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spring constant
 
 physicsAfterDraw = Enable physics after draw
+
+root = root
 
 secondInterval = Second interval
 
