--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -55,8 +55,8 @@ FORUM_TABLE = Tabla
 
 FORUM_USER_POST_BAR = Posts de usuarios
 
-FORUM_USER_POST_BAR.xAxisTitle = Posts
-FORUM_USER_POST_BAR.yAxisTitle = Usuarios con posts
+FORUM_USER_POST_BAR.xAxisTitle = Mensajes
+FORUM_USER_POST_BAR.yAxisTitle = Usuarios con mensajes
 
 FORUM_WORD_CLOUD = Nube de palabras
 
@@ -1052,7 +1052,7 @@ text.coursenametextfield = Nombre de fichero a archivar
 text.datetime            = Fecha y hora
 text.daydifference       = <p>{2}Tiempo transcurrido: {0, choice, 0#Cero d\u00EDas|1#un d\u00EDa|1<{0} d\u00EDas}{1,choice,0#|1# y una hora|1< y {1} horas}</p> {3}
 text.days                = d\u00EDas
-text.discussioncreation  = Discusiones creadas
+text.discussioncreation  = Debates creados
 text.empty               = S.C
 text.event               = Evento
 text.exportcsv           = Exportar CSV...
@@ -1083,7 +1083,7 @@ text.pass                = Aprobado
 text.past                = Pasados
 text.previouscache       = Cursos previos
 text.recent              = Recientes
-text.replies             = Respuestas a posts
+text.replies             = Mensajes de r\u00E9plicas
 text.restoredefault      = \u00BFSeguro que desea restaurar la configuraci\u00F3n predeterminada?
 text.search              = Buscar
 text.seconds             = segundos
