--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -53,7 +53,11 @@ FORUM_NETWORK = Grafo
 
 FORUM_TABLE = Tabla
 
-FORUM_USER_POST_BAR = Posts de usuarios
+FORUM_TREE_MAP = Rect\u00E1ngulos por Foro
+
+FORUM_TREE_MAP_USER = Rect\u00E1ngulos por Usuario
+
+FORUM_USER_POST_BAR = Mensajes de usuarios
 
 FORUM_USER_POST_BAR.xAxisTitle = Mensajes
 FORUM_USER_POST_BAR.yAxisTitle = Usuarios con mensajes
@@ -976,7 +980,7 @@ nodes.weightSendPost           = Nodos -> Peso post enviado
 
 notificationLoginSSO = Inicio de sesi\u00F3n con autenticaci\u00F3n Single Sign-On (SSO) usando credenciales previas para encriptar/desencriptar cach\u00E9.
 
-padding = Padding
+padding = Relleno
 
 parent = padre
 
