--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -53,6 +53,10 @@ FORUM_NETWORK = Graph
 
 FORUM_TABLE = Table
 
+FORUM_TREE_MAP = Treemap by Forum
+
+FORUM_TREE_MAP_USER = Treemap by User
+
 FORUM_USER_POST_BAR = User posts
 
 FORUM_USER_POST_BAR.xAxisTitle = Forums
