#108 añadido barra de aviso por no actualizar

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -140,6 +140,8 @@ VIOLIN_LOG_TIME.yAxisTitle = Registres
 
 about_app = Quant a l'aplicaci\u00F3
 
+alertDaysElapsed = Last update warning time (days)
+
 backGroundImage = Path to the background image
 
 borderLength = ample de l\u00EDnia
@@ -997,6 +999,7 @@ text.hours               = Hores
 text.inprogress          = In progress
 text.ip                  = IP Address
 text.lastaccess          = \u00DAltim acc\u00E9s:
+text.lastcourseupdate    = Time elapsed since the last update: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}\r\nLast course updated: {2}
 text.license             = License: MIT
 text.logs                = Logs
 text.minutes             = Minuts
