--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -140,6 +140,8 @@ VIOLIN_LOG_TIME.yAxisTitle = Hist\u00F3rico
 
 about_app = Sobre a aplica\u00E7\u00E3o
 
+alertDaysElapsed = Last update warning time (days)
+
 backGroundImage = Path to the background image
 
 borderLength = Espessura da linha
@@ -997,6 +999,7 @@ text.hours               = Horas
 text.inprogress          = In progress
 text.ip                  = IP Address
 text.lastaccess          = \u00DAltimo acesso:
+text.lastcourseupdate    = Time elapsed since the last update: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}\r\nLast course updated: {2}
 text.license             = License: MIT
 text.logs                = Logs
 text.minutes             = Minutos
