--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -140,6 +140,8 @@ VIOLIN_LOG_TIME.yAxisTitle = Logs
 
 about_app = About application
 
+alertDaysElapsed = Last update warning time (days)
+
 backGroundImage = Path to the background image
 
 borderLength = Line width
@@ -1071,6 +1073,7 @@ text.hours               = Hours
 text.inprogress          = In progress
 text.ip                  = IP Address
 text.lastaccess          = Last access: 
+text.lastcourseupdate    = Time elapsed since the last update: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}\r\nLast course updated: {2}
 text.license             = License: MIT
 text.logs                = Logs
 text.minutes             = Minutes
