--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -140,6 +140,8 @@ VIOLIN_LOG_TIME.yAxisTitle = Registros
 
 about_app = Acerca de la aplicaci\u00F3n
 
+alertDaysElapsed = Aviso de \u00FAltima actualizaci\u00F3n (en d\u00EDas)
+
 backGroundImage = Ruta de imagen de fondo
 
 borderLength = Ancho de l\u00EDnea
@@ -1071,6 +1073,7 @@ text.hours               = horas
 text.inprogress          = En progreso
 text.ip                  = Direcci\u00F3n IP
 text.lastaccess          = \u00DAltimo acceso: 
+text.lastcourseupdate    = Tiempo transcurrido desde la ultima actualizaci\u00F3n: {0, choice, 0#Cero d\u00EDas|1#un d\u00EDa|1<{0} d\u00EDas}{1,choice,0#|1# y una hora|1< y {1} horas}\r\n\u00DAltima actualizaci\u00F3n del curso: {2}
 text.license             = Licencia: MIT
 text.logs                = Registros
 text.minutes             = minutos
