--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -140,6 +140,8 @@ VIOLIN_LOG_TIME.yAxisTitle = Logs
 
 about_app = Informazioni sull'applicazione
 
+alertDaysElapsed = Last update warning time (days)
+
 backGroundImage = Path to the background image
 
 borderLength = Larghezza della linea
@@ -997,6 +999,7 @@ text.hours               = Ore
 text.inprogress          = In progress
 text.ip                  = IP Address
 text.lastaccess          = Ultimo accesso:
+text.lastcourseupdate    = Time elapsed since the last update: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}\r\nLast course updated: {2}
 text.license             = License: MIT
 text.logs                = Logs
 text.minutes             = Minuti
