Arreglado traduccion y modificado tiempo de auto ocultar la alerta

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -142,7 +142,7 @@ about_app = Quant a l'aplicaci\u00F3
 
 alertDaysElapsed = Last update warning time (days)
 
-backGroundImage = Path to the background image
+backGroundImage = Background image
 
 borderLength = ample de l\u00EDnia
 
