--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -142,7 +142,7 @@ about_app = \u00DCber die Bewerbung
 
 alertDaysElapsed = Last update warning time (days)
 
-backGroundImage = Path to the background image
+backGroundImage = Background image
 
 borderLength = Linienbreite
 
