--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -142,7 +142,7 @@ about_app = About application
 
 alertDaysElapsed = Last update warning time (days)
 
-backGroundImage = Path to the background image
+backGroundImage = Background image
 
 borderLength = Line width
 
