--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -142,7 +142,7 @@ about_app = Acerca de la aplicaci\u00F3n
 
 alertDaysElapsed = Aviso de \u00FAltima actualizaci\u00F3n (en d\u00EDas)
 
-backGroundImage = Ruta de imagen de fondo
+backGroundImage = Imagen de fondo
 
 borderLength = Ancho de l\u00EDnea
 
