--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -142,7 +142,7 @@ about_app = Sobre a aplica\u00E7\u00E3o
 
 alertDaysElapsed = Last update warning time (days)
 
-backGroundImage = Path to the background image
+backGroundImage = Background image
 
 borderLength = Espessura da linha
 
