#109 añadido grafo de los mensajes de las discusiones en arbol

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -296,6 +296,7 @@ edges.arrows.to.scaleFactor = Aristas -> Flechas -> Factor de escala
 edges.dashes                = Aristas -> Guiones
 edges.scaling.max           = Aristas -> Escalado -> M\u00E1x.
 edges.scaling.min           = Aristas -> Escalado -> M\u00EDn.
+edges.width                 = Aristas -> Borde
 
 emptyGradeColor = Color de calificaci\u00F3n vac\u00EDa
 
