--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -222,6 +222,7 @@ edges.arrows.to.scaleFactor = Edges -> Arrows -> Scale factor
 edges.dashes                = Edges -> Dashes
 edges.scaling.max           = Edges -> Scaling -> Max
 edges.scaling.min           = Edges -> Scaling -> Min
+edges.width                 = Edges -> Width
 
 emptyGradeColor = Couleur qualit\u00E9 vide
 
