--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -296,6 +296,7 @@ edges.arrows.to.scaleFactor = Edges -> Arrows -> Scale factor
 edges.dashes                = Edges -> Dashes
 edges.scaling.max           = Edges -> Scaling -> Max
 edges.scaling.min           = Edges -> Scaling -> Min
+edges.width                 = Edges -> Width
 
 emptyGradeColor = Color empty grade
 
