arreglado bugs y añadido pequeños cambios

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -51,6 +51,8 @@ FORUM_BAR.yAxisTitle = Forums
 
 FORUM_NETWORK = Graph
 
+FORUM_POSTS = Hierarchy
+
 FORUM_TABLE = Table
 
 FORUM_TREE_MAP = Treemap by Forum
@@ -983,7 +985,7 @@ text.coursemodule        = Course Module
 text.coursename          = Archive course
 text.coursenametextfield = Archived filename
 text.datetime            = Date and time
-text.daydifference       = <p>{2}Time elapsed: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}</p> {3}
+text.daydifference       = Time elapsed: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}
 text.days                = Dies
 text.discussioncreation  = Discussions created
 text.empty               = N.A
