--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -51,6 +51,8 @@ FORUM_BAR.yAxisTitle = Foros
 
 FORUM_NETWORK = Grafo
 
+FORUM_POSTS = \u00C1rbol
+
 FORUM_TABLE = Tabla
 
 FORUM_TREE_MAP = Rect\u00E1ngulos por Foro
@@ -1057,7 +1059,7 @@ text.coursemodule        = M\u00F3dulo del curso
 text.coursename          = Archivar curso
 text.coursenametextfield = Nombre de fichero a archivar
 text.datetime            = Fecha y hora
-text.daydifference       = <p>{2}Tiempo transcurrido: {0, choice, 0#Cero d\u00EDas|1#un d\u00EDa|1<{0} d\u00EDas}{1,choice,0#|1# y una hora|1< y {1} horas}</p> {3}
+text.daydifference       = Tiempo transcurrido: {0, choice, 0#Cero d\u00EDas|1#un d\u00EDa|1<{0} d\u00EDas}{1,choice,0#|1# y una hora|1< y {1} horas}
 text.days                = d\u00EDas
 text.discussioncreation  = Debates creados
 text.empty               = S.C
