Configuración del curso modificado

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1041,6 +1041,7 @@ tab.section              = Secci\u00F3n
 tab.visualization        = An\u00E1lisis visual
 
 tabs.ACTIVITY_COMPLETION = An\u00E1lisis visual - Actividades finalizadas
+tabs.CALENDAR_EVENT      = Eventos del calendario
 tabs.FORUM               = Foros
 tabs.GRADES              = An\u00E1lisis visual - Calificaciones
 tabs.LOGS                = An\u00E1lisis visual - Registros
