--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -967,6 +967,7 @@ tab.section              = Sezione
 tab.visualization        = Visual analytic
 
 tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.CALENDAR_EVENT      = Calendar event
 tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
