--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -967,6 +967,7 @@ tab.section              = Secci\u00F3
 tab.visualization        = Visual analytic
 
 tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.CALENDAR_EVENT      = Calendar events
 tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grade
 tabs.LOGS                = Visual analytic - Logs
