--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -964,6 +964,7 @@ tab.section              = Abschnitt
 tab.visualization        = Visual analytic
 
 tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.CALENDAR_EVENT      = Calendar events
 tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
