Arreglado pequeños errores y otros cambios

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -55,9 +55,9 @@ FORUM_POSTS = Hierarchy
 
 FORUM_TABLE = Table
 
-FORUM_TREE_MAP = Treemap by Forum
+FORUM_TREE_MAP = Treemap by forum
 
-FORUM_TREE_MAP_USER = Treemap by User
+FORUM_TREE_MAP_USER = Treemap by user
 
 FORUM_USER_POST_BAR = User posts
 
@@ -212,6 +212,10 @@ choiceBox.YEAR_MONTH   = Monate
 choiceBox.YEAR_QUARTER = Viertel
 choiceBox.YEAR_WEEK    = Wochen
 
+colorContains = Filtered node color
+
+colorNotContains = Not filtered node color
+
 confirmation = Confirmation
 
 cutGrade = Grade zu Pass
@@ -233,6 +237,7 @@ error = Error
 error.chargeconfiguration = Fehler bei der Konfiguration importieren
 error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
 error.downloadingdata     = Error when downloading data.
+error.emptytextfield      = Error: search text must be not empty
 error.fields              = Sie m\u00FCssen alle Felder ausf\u00FCllen.
 error.generateCharts      = Diagramme k\u00F6nnen nicht generiert werden.
 error.generatedataset     = Fehler beim Erstellen des Datasets.
@@ -840,6 +845,7 @@ menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
 menu.exportphotos        = With user photos...
 menu.file                = _Datei
+menu.githubpage          = _GitHub repository
 menu.help                = Hilfe
 menu.importconfig        = Import configuration...
 menu.importlogs          = I_mport logs...
@@ -978,6 +984,7 @@ text.cache               = Lokale Dateien
 text.component           = Component
 text.confirmation        = Confirmation
 text.confirmationtext    = Are you sure to remove the cache of the selected course?
+text.courseconfiguration = Course configuration
 text.coursedata          = Course data
 text.coursemodule        = Course Module
 text.coursename          = Archive course
