--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -55,9 +55,9 @@ FORUM_POSTS = Hierarchy
 
 FORUM_TABLE = Table
 
-FORUM_TREE_MAP = Treemap by Forum
+FORUM_TREE_MAP = Treemap by forum
 
-FORUM_TREE_MAP_USER = Treemap by User
+FORUM_TREE_MAP_USER = Treemap by user
 
 FORUM_USER_POST_BAR = User posts
 
@@ -286,6 +286,10 @@ clustering.type.logs.event               = Event
 clustering.type.logs.section             = Section
 clustering.value                         = Value
 
+colorContains = Filtered node color
+
+colorNotContains = Not filtered node color
+
 confirmation = Confirmation
 
 cutGrade = Grade to pass
@@ -307,6 +311,7 @@ error = Error
 error.chargeconfiguration = Error when importing the configuration
 error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
 error.downloadingdata     = Error when downloading data.
+error.emptytextfield      = Error: search text must be not empty
 error.fields              = You have to complete all the fields.
 error.generateCharts      = Can't generate charts.
 error.generatedataset     = Error building the dataset.
@@ -917,6 +922,7 @@ menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
 menu.exportphotos        = With user photos...
 menu.file                = _File
+menu.githubpage          = _GitHub repository
 menu.help                = _Help
 menu.importconfig        = _Import configuration...
 menu.importlogs          = I_mport logs...
@@ -1055,6 +1061,7 @@ text.cache               = Local Files
 text.component           = Component
 text.confirmation        = Confirmation
 text.confirmationtext    = Are you sure to remove the cache of the selected course?
+text.courseconfiguration = Course configuration
 text.coursedata          = Course data
 text.coursemodule        = Course Module
 text.coursename          = Archive course
