--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -55,9 +55,9 @@ FORUM_POSTS = \u00C1rbol
 
 FORUM_TABLE = Tabla
 
-FORUM_TREE_MAP = Rect\u00E1ngulos por Foro
+FORUM_TREE_MAP = Rect\u00E1ngulos por foro
 
-FORUM_TREE_MAP_USER = Rect\u00E1ngulos por Usuario
+FORUM_TREE_MAP_USER = Rect\u00E1ngulos por usuario
 
 FORUM_USER_POST_BAR = Mensajes de usuarios
 
@@ -286,6 +286,10 @@ clustering.type.logs.event               = Evento
 clustering.type.logs.section             = Secci\u00F3n
 clustering.value                         = Valor
 
+colorContains = Color de nodos filtrados
+
+colorNotContains = Color de nodos no filtrados
+
 confirmation = Confirmaci\u00F3n
 
 cutGrade = Nota de corte
@@ -307,6 +311,7 @@ error = Error
 error.chargeconfiguration = Error al importar la configuraci\u00F3n
 error.csvparsing          = Error al descargar el CSV de los registros. Probablemente no tengas permiso de acceso a los registros.
 error.downloadingdata     = Error al descargar los datos.
+error.emptytextfield      = Error: el texto de b\u00FAsqueda no debe estar vac\u00EDo.
 error.fields              = Debes completar todos los campos.
 error.generateCharts      = No se han podido generar los gr\u00E1ficos.
 error.generatedataset     = Error en la construcci\u00F3n del dataset.
@@ -917,6 +922,7 @@ menu.exportdashboard     = Exportar dashboard...
 menu.exportdefaultphotos = Con foto por defecto...
 menu.exportphotos        = Con fotos de usuarios...
 menu.file                = _Archivo
+menu.githubpage          = Repositorio en _GitHub
 menu.help                = A_yuda
 menu.importconfig        = _Importar configuraci\u00F3n...
 menu.importlogs          = I_mportar registros...
@@ -1055,6 +1061,7 @@ text.cache               = Archivos locales
 text.component           = Componente
 text.confirmation        = Confirmaci\u00F3n
 text.confirmationtext    = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
+text.courseconfiguration = Configuraci\u00F3n del curso
 text.coursedata          = Datos del curso
 text.coursemodule        = M\u00F3dulo del curso
 text.coursename          = Archivar curso
