--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -55,9 +55,9 @@ FORUM_POSTS = Hierarchy
 
 FORUM_TABLE = Table
 
-FORUM_TREE_MAP = Treemap by Forum
+FORUM_TREE_MAP = Treemap by forum
 
-FORUM_TREE_MAP_USER = Treemap by User
+FORUM_TREE_MAP_USER = Treemap by user
 
 FORUM_USER_POST_BAR = User posts
 
@@ -212,6 +212,10 @@ choiceBox.YEAR_MONTH   = Meses
 choiceBox.YEAR_QUARTER = Quartos
 choiceBox.YEAR_WEEK    = Semanas
 
+colorContains = Filtered node color
+
+colorNotContains = Not filtered node color
+
 confirmation = Confirmation
 
 cutGrade = Grau de passagem
@@ -233,6 +237,7 @@ error = Error
 error.chargeconfiguration = Erro ao importar a configura\u00E7\u00E3o
 error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
 error.downloadingdata     = Error when downloading data.
+error.emptytextfield      = Error: search text must be not empty
 error.fields              = Voc\u00EA tem que completar todos os campos.
 error.generateCharts      = N\u00E3o \u00E9 poss\u00EDvel gerar gr\u00E1ficos.
 error.generatedataset     = Erro ao construir o conjunto de dados.
@@ -843,6 +848,7 @@ menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
 menu.exportphotos        = With user photos...
 menu.file                = _Arquivo
+menu.githubpage          = _GitHub repository
 menu.help                = Socorro
 menu.importconfig        = Import configuration...
 menu.importlogs          = I_mport logs...
@@ -981,6 +987,7 @@ text.cache               = Ficheiros locais
 text.component           = Component
 text.confirmation        = Confirmation
 text.confirmationtext    = Are you sure to remove the cache of the selected course?
+text.courseconfiguration = Course configuration
 text.coursedata          = Course data
 text.coursemodule        = Course Module
 text.coursename          = Archive course
