--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -55,9 +55,9 @@ FORUM_POSTS = Hierarchy
 
 FORUM_TABLE = Table
 
-FORUM_TREE_MAP = Treemap by Forum
+FORUM_TREE_MAP = Treemap by forum
 
-FORUM_TREE_MAP_USER = Treemap by User
+FORUM_TREE_MAP_USER = Treemap by user
 
 FORUM_USER_POST_BAR = User posts
 
@@ -212,6 +212,10 @@ choiceBox.YEAR_MONTH   = Mesos
 choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Setmanes
 
+colorContains = Filtered node color
+
+colorNotContains = Not filtered node color
+
 confirmation = Confirmation
 
 cutGrade = Grau de passi
@@ -233,6 +237,7 @@ error = Error
 error.chargeconfiguration = Error a l'importar la configuraci\u00F3
 error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
 error.downloadingdata     = Error when downloading data.
+error.emptytextfield      = Error: search text must be not empty
 error.fields              = Heu de completar tots els camps.
 error.generateCharts      = No es poden generar gr\u00E0fics.
 error.generatedataset     = S'ha produ\u00EFt un error en construir el conjunt de dades.
@@ -843,6 +848,7 @@ menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
 menu.exportphotos        = With user photos...
 menu.file                = _Dossier
+menu.githubpage          = _GitHub repository
 menu.help                = Ajuda
 menu.importconfig        = Import configuration...
 menu.importlogs          = I_mport logs...
@@ -981,6 +987,7 @@ text.cache               = Els arxius locals
 text.component           = Component
 text.confirmation        = Confirmation
 text.confirmationtext    = Are you sure to remove the cache of the selected course?
+text.courseconfiguration = Course configuration
 text.coursedata          = Course data
 text.coursemodule        = Course Module
 text.coursename          = Archive course
