--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -55,9 +55,9 @@ FORUM_POSTS = Hierarchy
 
 FORUM_TABLE = Table
 
-FORUM_TREE_MAP = Treemap by Forum
+FORUM_TREE_MAP = Treemap by forum
 
-FORUM_TREE_MAP_USER = Treemap by User
+FORUM_TREE_MAP_USER = Treemap by user
 
 FORUM_USER_POST_BAR = User posts
 
@@ -212,6 +212,10 @@ choiceBox.YEAR_MONTH   = mesi
 choiceBox.YEAR_QUARTER = alloggio
 choiceBox.YEAR_WEEK    = settimane
 
+colorContains = Filtered node color
+
+colorNotContains = Filtered node color
+
 confirmation = Confirmation
 
 cutGrade = Grado di passaggio
@@ -233,6 +237,7 @@ error = Error
 error.chargeconfiguration = Errore durante l'importazione della configurazione
 error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
 error.downloadingdata     = Error when downloading data.
+error.emptytextfield      = Error: search text must be not empty
 error.fields              = Devi completare tutti i campi.
 error.generateCharts      = Non posso generare grafici.
 error.generatedataset     = Errore durante la creazione del set di dati.
@@ -843,6 +848,7 @@ menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
 menu.exportphotos        = With user photos...
 menu.file                = _File
+menu.githubpage          = _GitHub repository
 menu.help                = Aiuto
 menu.importconfig        = Import configuration...
 menu.importlogs          = I_mport logs...
@@ -981,6 +987,7 @@ text.cache               = File locali
 text.component           = Component
 text.confirmation        = Confirmation
 text.confirmationtext    = Are you sure to remove the cache of the selected course?
+text.courseconfiguration = Course configuration
 text.coursedata          = Course data
 text.coursemodule        = Course Module
 text.coursename          = Archive course
